sirius deyarli bitdi

--- a/src/shared/localization/locales/en_US.json
+++ b/src/shared/localization/locales/en_US.json
@@ -647,7 +647,7 @@
   "sidebar.sample.news": "News",
   "sidebar.sample.about": "About",
   "sidebar.order": "Order Car",
-  "sidebar.car": "Car",
+  "sidebar.product": "Product",
   "sidebar.page": "Pages",
   "sidebar.order.position": "Position",
   "sidebar.order.exterior": "Exterior",
