songi tekshirish uchun

--- a/src/shared/localization/locales/en_US.json
+++ b/src/shared/localization/locales/en_US.json
@@ -636,6 +636,7 @@
   "sidebar.sample.bannerSecond": "Banner Second",
   "sidebar.sample.brand": "Brand",
   "sidebar.sample.index-category": "Main page filter",
+  "sidebar.sample.stock": "Sales type",
   "sidebar.sample.smell": "Smell",
   "sidebar.sample.special": "Special",
   "sidebar.sample.banner": "Banner",
